Added password_toggle.xml, and updated activity_drawer_base.xml and activity_login.xml

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -106,7 +106,8 @@
             android:textColorHint="@color/grey"
             app:errorEnabled="true"
             app:startIconDrawable="@drawable/lock"
-            app:endIconMode="password_toggle">
+            app:passwordToggleEnabled="true"
+            app:passwordToggleDrawable="@drawable/password_toggle">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editPassword"
