--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -110,7 +110,8 @@
             app:errorIconDrawable="@drawable/baseline_error_24"
             app:errorIconTint="@color/design_default_color_error"
             app:startIconDrawable="@drawable/lock"
-            app:endIconMode="password_toggle">
+            app:passwordToggleEnabled="true"
+            app:passwordToggleDrawable="@drawable/password_toggle">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editPassword"
@@ -134,7 +135,8 @@
             app:errorIconTint="@color/design_default_color_error"
             app:layout_constraintEnd_toEndOf="parent"
             app:startIconDrawable="@drawable/lock"
-            app:endIconMode="password_toggle">
+            app:passwordToggleEnabled="true"
+            app:passwordToggleDrawable="@drawable/password_toggle">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/confirmPassword"
